@@ -1,3 +1,10 @@
+2022-06-23T08:25:33Z:
+* notice: last 14d: unq all: 11 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 441 2169 / 466 2211
+* notice: next accum: outdated-unq outdated-all / unq all: 441 2169 / 467 2211
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-09 2022-06-23]
+
 2022-06-22T16:27:10Z:
 * notice: last 14d: unq all: 11 42
 * notice: prev accum: outdated-unq outdated-all / unq all: 440 2168 / 466 2211
